[tool.poetry]
name = "litex-test"
version = "0.1.0"
description = ""
authors = ["Nelson Gauthier <nelson.gauthier@gmail.com>"]
readme = "README.md"
packages = [{include = "litex_test"}]

[tool.poetry.dependencies]
python = "^3.10"
migen = { git = "https://github.com/m-labs/migen.git" }
litex = { git = "https://github.com/nelgau/litex", branch = "use-pkg-config" }
# litex = { path = "vendor/litex", develop = true }
litedram = { git = "https://github.com/enjoy-digital/litedram.git" }
liteeth = { git = "https://github.com/enjoy-digital/liteeth.git" }
litesdcard = { git = "https://github.com/nelgau/litesdcard.git", branch = "add-package-data" }
liteiclink = { git = "https://github.com/enjoy-digital/liteiclink.git" }
litescope = { git = "https://github.com/enjoy-digital/litescope.git" }
pythondata-cpu-vexriscv = { git = "https://github.com/litex-hub/pythondata-cpu-vexriscv.git" }
pythondata-software-picolibc = { git = "https://github.com/litex-hub/pythondata-software-picolibc.git" }
pythondata-software-compiler_rt = { git = "https://github.com/litex-hub/pythondata-software-compiler_rt.git" }
pythondata-misc-tapcfg = { git = "https://github.com/litex-hub/pythondata-misc-tapcfg.git" }
meson = "^0.63.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
